--- a/src/styles/principais.scss
+++ b/src/styles/principais.scss
@@ -1,44 +1,6 @@
 @use 'config';
-@use 'principais';
 
-
-* {
-    margin: 0;
-    box-sizing:border-box;
-    padding: 0;
-}
-
-body {
-    font-family: config.$principalFont;
-}
-
-main {
-    text-align: center;
-    background-color: rgb(238, 237, 237);
-    width: 100%;
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.container {
-    width: 70%;
-
-    @media screen and (max-width: 1280px) {
-        width: 95%;
-        padding: 10px 0 0 0;
-    }
-
-    
-    @media screen and (max-width: 1023px) {
-        width: 80%;
-    }
-
-    @media screen and (max-width: 767px) {
-        width: 100%;
-    }
-
-    .special-dishes {
+.main-dishes {
         .tittle {
             font-family: config.$title;
             text-align: left;
@@ -68,6 +30,7 @@ main {
                 border-radius: 5px;
                 padding: 4px 0 4px 10px;
                 display: flex;
+                justify-content: center;
                 flex-direction: column;
                 text-align: left;
                 margin: 20px 0;
@@ -87,6 +50,7 @@ main {
                         
                 .div {
                     display: flex;
+                    justify-content: space-between;
                     align-items: center;
 
                     .div-block {
@@ -124,5 +88,3 @@ main {
             }
         }
     }
-}
-
