--- a/src/styles/specialDishes.scss
+++ b/src/styles/specialDishes.scss
@@ -4,7 +4,8 @@
     .tittle {
         font-family: config.$title;
         text-align: left;
-        font-size: 30px
+        font-size: 30px;
+        padding-left: 10px;
     }
 
     .foods-list {
