criação do navbar

--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -1,3 +1,4 @@
 $title: "Bebas Neue", serif;
 $titleFoods: "Quicksand", serif;
 $principalFont: "Roboto Condensed", serif;
+$titlePrincipal: "Outfit", serif;
