--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,21 +3,102 @@
 @use 'principais';
 @use 'porcoes';
 @use 'combos';
-@use 'caipirinhaTra';   
-@use 'caipirinhaEspeciais'; 
-@use 'ginsTradicionais';    
+@use 'caipirinhaTra';
+@use 'caipirinhaEspeciais';
+@use 'ginsTradicionais';
 @use 'cervejas';
 @use 'bebidasNAlcool';
 
 * {
     margin: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
     padding: 0;
 }
 
 body {
     font-family: config.$principalFont;
 }
+
+
+header {
+    text-align: center;
+    width: 70%;
+    margin: 0 auto;
+    padding: 0;
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
+
+
+    .containerHeader {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        background-color: #8d4925;
+        height: 50vh;
+        width: 100%;
+        background-size: cover;
+
+        h3 {
+            font-family: config.$titlePrincipal;
+            font-weight: 800;
+            font-size: 40px;
+        }
+
+        .logo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+        }
+
+        .link-list {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            align-items: center;
+
+            @media screen and (max-width: 767px) {
+               flex-direction: column;
+            }
+
+            .list {
+                list-style: none;
+                display: flex;
+                justify-content: center;
+                gap: 30px;
+                margin: 10px auto;
+
+                .list-item {
+
+                    a {
+                        font-size: 30px;
+                        color: #000000;
+
+                        :hover {
+                            color: #f0b798;
+                        }
+                    }
+
+
+                }
+            }
+        }
+    }
+
+    .avaliar {
+        color: #e2b52f;
+        text-decoration: none;
+        text-align: left;
+
+        :hover {
+            color: #d8b859;
+        }
+
+    }
+}
+
 
 main {
     text-align: center;
@@ -36,14 +117,14 @@ main {
         padding: 10px 0 0 0;
     }
 
-    
+
     @media screen and (max-width: 1023px) {
         width: 80%;
     }
 
     @media screen and (max-width: 767px) {
         width: 100%;
-    } 
+    }
 }
 
 
