criamos o link do wifi

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -37,6 +37,8 @@ footer {
     p {
         text-align: center;
         padding: 15px 0;
+        color: black;
+        list-style: n;
     }
 
     @media screen and (max-width: 767px) {
