--- a/src/styles/principal.scss
+++ b/src/styles/principal.scss
@@ -120,3 +120,16 @@
         }
     }
 }
+
+.info-message {
+    display: none;
+    margin-top: 15px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    font-size: 14px;
+    color: #333;
+    max-width: 300px;
+    position: absolute;
+}
