teste do navbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -185,3 +185,9 @@ main {
     max-width: 300px;
     position: absolute;
 }
+
+nav {
+    position: fixed;
+    top: 0;
+    background-color: transparent;
+}
