--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -133,12 +133,18 @@ main {
 
 //começo navbar dos links
 .scroll-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     overflow-x: auto;
     white-space: nowrap;
     padding: 10px;
     background-color: #f4f4f4;
-    scrollbar-width: none;
+    z-index: 1000; /* Garantir que esteja acima de outros elementos */
+    scrollbar-width: none; /* Remover barra de rolagem no Firefox */
+    -ms-overflow-style: none; /* Remover barra de rolagem no IE/Edge */
 
 }
 
@@ -158,7 +164,11 @@ main {
     background-color: #e0e0e0;
     border-radius: 5px;
     transition: background-color 0.3s;
+    white-space: nowrap; /* Evitar quebra de linha */
+
 }
+
+
 
 .scroll-container a:hover {
     background-color: #8d4925;
@@ -186,8 +196,3 @@ main {
     position: absolute;
 }
 
-nav {
-    position: fixed;
-    top: 0;
-    background-color: transparent;
-}
