--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@ header {
     text-align: center;
     width: 70%;
     margin: 10px auto 0 auto;
+    padding-top: 60px;
 
 
     @media screen and (max-width: 767px) {
