--- a/src/styles/specialDishes.scss
+++ b/src/styles/specialDishes.scss
@@ -8,6 +8,7 @@
         text-align: left;
         font-size: 30px;
         margin-top: 40px;
+        padding-left: 5px;
     }
 
     .foods-list {
@@ -90,6 +91,8 @@
 
             }
         }
+
+
     }
 }
 
